# autogen-ejentum

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/autogen_ejentum/: __init__.py  _api.py  tools.py
tests/: test_autogen_ejentum.py
