[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "autogen-ejentum"
version = "0.1.0"
description = "AutoGen tools for the Ejentum Reasoning Harness. Four agent-callable async functions (harness_reasoning, harness_code, harness_anti_deception, harness_memory) returned by ejentum_tools(api_key=...). Each call retrieves a task-matched cognitive operation engineered in two layers: a natural-language procedure plus an executable reasoning topology."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ejentum", email = "info@ejentum.com" },
]
keywords = [
    "autogen",
    "autogen-agentchat",
    "microsoft",
    "ejentum",
    "reasoning-harness",
    "agentic-ai",
    "llm",
    "anti-deception",
    "cognitive-scaffold",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "autogen-core>=0.4.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://ejentum.com"
Documentation = "https://ejentum.com/docs/api_reference"
Repository = "https://github.com/ejentum/autogen-ejentum"
Issues = "https://github.com/ejentum/autogen-ejentum/issues"
Changelog = "https://github.com/ejentum/autogen-ejentum/blob/main/CHANGELOG.md"
Pricing = "https://ejentum.com/pricing"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "build>=1.2.0",
    "ruff>=0.6.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_ejentum"]

[tool.hatch.build.targets.sdist]
include = [
    "src/autogen_ejentum",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
